--- a/templates/dashboard/company/show.html.twig
+++ b/templates/dashboard/company/show.html.twig
@@ -1,5 +1,7 @@
 {% extends 'dashboard_layout.html.twig' %}
 
+{% set componentPath = 'dashboard/company/components/' %}
+
 {% block content %}
     <div>
         <p>id : {{ company.id }}</p>
@@ -20,6 +22,8 @@
     </div>
     <a href="{{ path('dashboard_company_edit', {id: company.id}) }}">Edit</a>
     <a href="{{ path('dashboard_company_index') }}">Back to list</a>
-    {{ include('dashboard/company/_delete_form.html.twig') }}
+
+    {% include componentPath ~ 'delete_form.html.twig' %}
+
 {% endblock %}
 
